# RentApi

./: README.rst  alembic.ini  pyproject.toml
rent_api/: db.py  main.py  models.py  schemas.py  test.py
rent_api/utils/: hata.py  onliner_pars.py  realt_pars.py  st_pars.py
rent_api/utils/data/: realt.txt.html  st.html
tests/: test_rent_api.py
