[tool.poetry]
name = "rent_api"
version = "0.1.0"
description = "Апи для получения актуальных данных по квартирам в городе Минске. На основе предложений сайтов онлайнер, рент бай, тут бай, куфар."
authors = ["AndreyeuIvan <andreeviv@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.25.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.11"
pydantic = "^1.8.1"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
